--- a/bar/90_contents/src/message.html
+++ b/bar/90_contents/src/message.html
@@ -21,6 +21,7 @@
     <!--<script src="../../../appcell-resources/js/common.js"></script>-->
     <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/message.js"></script>
     <!--<script src="../../../appcell-resources/js/message.js"></script>-->
+    <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/bootstrap-switch/bootstrap-switch.min.js"></script>
     <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/settings.js"></script>
     <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
@@ -28,6 +29,7 @@
     <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
     <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
     <!--<link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/message.css' rel='stylesheet' type='text/css'>-->
+    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/bootstrap-switch/bootstrap-switch.min.css' rel='stylesheet' type='text/css'>
     <link href='../../../appcell-resources/css/message.css' rel='stylesheet' type='text/css'>
     <!--<link href='./css/message.css' rel='stylesheet' type='text/css'>-->
     <!--     Fonts and icons     -->
