Use letter "x" as close icon in dialog
Closes #94

--- a/bar/90_contents/src/socialgraph.html
+++ b/bar/90_contents/src/socialgraph.html
@@ -81,7 +81,7 @@
           <!-- Modal content -->
           <div class="modal-content">
               <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">×</button>
+                  <button type="button" class="close" data-dismiss="modal">x</button>
                   <h4 class="modal-title" id="header-public" data-i18n="PublicBOX">Public BOX</h4>
               </div>
               <div class="modal-body">
@@ -101,7 +101,7 @@
       <!-- Modal content -->
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">×</button>
+          <button type="button" class="close" data-dismiss="modal">x</button>
           <h4 class="modal-title" id="header-role" data-i18n="AssigningRelation">Assigning Relation</h4>
         </div>
         <div class="modal-body">
