Responding to issues 114,115 Close #114 Close #115

--- a/bar/90_contents/src/socialgraph.html
+++ b/bar/90_contents/src/socialgraph.html
@@ -55,6 +55,7 @@
                         <div class="panel-body">
                           <div class="list-group">
                             <div id="dvExtCellList"></div>
+                            <div class="list-group-item"><a class="allToggle" href="#" onClick="sg.createAddExtCell()" data-i18n="CreateExternalCellPlus"></a></div>
                             <!--<div id="dvExtCell" class="toggleButton" style="margin-bottom: 10px;">
                               <a class="list-group-item toggle" id="extcellToggle">
                                 外部セル
