--- a/bar/90_contents/src/message.html
+++ b/bar/90_contents/src/message.html
@@ -28,10 +28,10 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
     <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
     <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
-    <!--<link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/message.css' rel='stylesheet' type='text/css'>-->
-    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/bootstrap-switch/bootstrap-switch.min.css' rel='stylesheet' type='text/css'>
-    <link href='../../../appcell-resources/css/message.css' rel='stylesheet' type='text/css'>
+    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/message.css' rel='stylesheet' type='text/css'>
+    <!--<link href='../../../appcell-resources/css/message.css' rel='stylesheet' type='text/css'>-->
     <!--<link href='./css/message.css' rel='stylesheet' type='text/css'>-->
+    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/bootstrap-switch/bootstrap-switch.min.css' rel='stylesheet' type='text/css'>
     <!--     Fonts and icons     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
 </head>
