display the application icon on the role list in the HomeApp.

--- a/bar/90_contents/src/applicationmarket.html
+++ b/bar/90_contents/src/applicationmarket.html
@@ -20,6 +20,7 @@
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/common.js"></script>
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/applicationmarket.js"></script>
+  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/settings.js"></script>
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
